fix: z-indexes

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -13,11 +13,11 @@ html
   transform: translate(-50%, -50%)
   border-radius: 100px
   background: white
+  color: white
   pointer-events: none
   transition: width .16s ease, height .16s ease
   will-change: width, height
-  z-index: 999
-  color: white
+  z-index: $z-cursor
   &.active
     width: 3.3rem
     height: 3.3rem
