--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -1,6 +1,8 @@
 // Z-INDEXES
-// 800 Footer
-// 900 Header
+$z-footer: 700
+$z-header: 800
+$z-filter: 600
+$z-cursor: 900
 
 $breakpoint-mobile: 768px
 $breakpoint-tablet: 1024px
@@ -17,7 +19,6 @@ $font-titles: 15vw
 $font-subtitles: 7vw
 
 $transition-button: .33s ease
-
 $max-content-width: 960px
 
 body
